styled setup view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,3 +71,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/opensans-regular.ttf
+        - asset: assets/fonts/opensans-semibold.ttf
